<resources>
    <string name="app_name">Enema</string>
    <string name="powerd_by_enema">Powerd by @EnEma</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="enema_logo">enema logo</string>
    <string name="browse">Browse</string>
    <string name="sign_in">SIGN IN</string>
    <string name="todo">TODO</string>
    <string name="mobile">Mobile</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="or">Or</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="register">Register.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="full_name">Full Name</string>
    <string name="singup">SINGUP</string>
    <string name="i_accept_your_terms_condition"><![CDATA[I Accept your Terms & Condition]]></string>
    <string name="already_have_an_account">Already have an Account ?</string>
    <string name="login_rreg">Login.</string>
    <string name="valid_mobile_number">Please enter valid mobile number without (+91).</string>
    <string name="valid_password">Password must be of 6 characters or more.</string>
    <string name="verification">Auto Verifying</string>
    <string name="we_have_sent_you_an_access_code_via_sms_for_mobile_number_verification">We have sent you an access code via sms for mobile number verification.</string>
    <string name="resend_code">Resend Code</string>
    <string name="_hint">*</string>
    <string name="nine_one">+91</string>
    <string name="home">Home</string>
    <string name="wishlist">Wishlist</string>
    <string name="my_courses">My Courses</string>
    <string name="refer_earn"><![CDATA[Refer & Earn]]></string>
    <string name="account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_5">5</string>
    <string name="learn_by_fun">LEARN BY FUN</string>
    <string name="_800">₹ 800</string>
    <string name="click_here">CLICK HERE</string>
    <string name="good_afternoon_user">Good Afternoon, User</string>
    <string name="loading">Loading</string>
    <string name="illustrator_cc_2019_vijay_nagar_indore">illustrator CC 2019</string>
    <string name="_26_488">(26,488)</string>
    <string name="_1350_00">₹, 1350.00</string>
    <string name="_13_783_99">₹13,783.99</string>
    <string name="deals_for_you">Deals for you</string>
    <string name="we_connect">We Connect...</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="support">Support</string>
    <string name="profile">Profile</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="refer_amp_earn"><![CDATA[Refer & Earn]]></string>
    <string name="my_bookings">My Bookings</string>
    <string name="edit">EDIT</string>
    <string name="ankit_gmail_com">ankit@gmail.com</string>
    <string name="email">Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="city_of_residence">City of Residence</string>
    <string name="city_on_id_card">City on ID Card</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="name">Name</string>
    <string name="_91_8770664141">+91 8770664141</string>
    <string name="ankit">Ankit</string>
    <string name="profile_acc">Profile</string>
    <string name="good_afternoon_ankit">Good Afternoon, Ankit</string>
    <string name="edit_profile">EDIT</string>
    <string name="vijay_nagar_indore">Vijay Nagar, Indore</string>
    <string name="_24_470">(24,470)</string>
    <string name="bookings_details">Bookings Details</string>
    <string name="your_slots">Your slots</string>
    <string name="question">Question ?</string>
    <string name="review">Review</string>
    <string name="review_this_course">Review this course</string>
    <string name="notification">Notification</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s</string>
    <string name="new_noti">New Notification</string>
    <string name="where_does_it_come_from_contrary_to_popular_belief_lorem_ipsum_is_not_simply_random_text_it_has_roots_in_a_piece_of_classical_latin_literature_from_45_bc_making_it_over_2000_years_old_richard_mcclintock_a_latin_professor_at_hampden_sydney_college_in_virginia_looked_up_one_of_the_more_obscure_latin_words_consectetur_from_a_lorem_ipsum_passage_and_going_through_the_cites_of_the_word_in_classical_literature_discovered_the_undoubtable_source_lorem_ipsum_comes_from_sections_1_10_32_and_1_10_33_of_de_finibus_bonorum_et_malorum_the_extremes_of_good_and_evil_by_cicero_written_in_45_bc_this_book_is_a_treatise_on_the_theory_of_ethics_very_popular_during_the_renaissance_the_first_line_of_lorem_ipsum_lorem_ipsum_dolor_sit_amet_comes_from">Where does it come from? Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of de Finibus Bonorum et Malorum(The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, Lorem ipsum dolor sit amet.., comes from</string>
    <string name="privacy_policy_new">Privacy Policy</string>
    <string name="_0">0</string>
    <string name="pref">Where does it come from? Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \"de Finibus Bonorum et Malorum\" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, \"Lorem ipsum dolor sit amet..\", comes from a line in section 1.10.32.</string>
    <string name="welcome_to_enema_socio_educational_network_hereinafter_referred_to_as_quot_enema_socio_educational_network_quot_quot_www_enema_net_com_quot_quot_we_quot_quot_us_quot_or_quot_our_quot_enema_socio_educational_network_is_owned_and_operated_by_and_or_on_behalf_of_enema_socio_educational_network_pvt_ltd_we_provide_an_online_platform_to_bridge_the_gap_between_the_seeking_students_participants_and_facilitators_offering_academic_as_well_as_non_academic_workshops_in_various_domains_enema_socio_educational_network_brings_it_s_unique_and_compelling_way_to_connecting_experts_with_students_participants_by_conducting_workshops_we_provide_informative_options_to_every_user_about_the_training_workshops_available_within_the_nearby_vicinity_as_well_as_in_the_area_location_of_the_user_s_choice_and_also_facilitate_providers_practitioners_of_such_value_adds_to_reach_the_masses_at_insignificant_cost_users_get_access_to_a_variety_of_services_including_but_not_limited_to_our_website_mobile_application_and_other_products_and_services_available_through_our_website_and_mobile_application_collectively_the_quot_services_quot_our_privacy_policy_is_incorporated_as_part_of_our_terms_of_use_by_using_our_services_you_acknowledge_that_you_have_read_understood_and_agree_to_our_privacy_policy_and_terms_of_use_which_apply_to_all_visitors_users_and_others_who_access_our_services_quot_users_quot_if_you_do_not_want_to_be_bound_by_the_same_please_do_not_use_our_services">Welcome to EnEma Socio-Educational Network (hereinafter referred to as \"EnEma Socio-Educational Network\" ,\"​ www.enema-net.com ​ ​ \", \"we\" ,\"us\", or \"our\"). EnEma Socio-Educational Network is owned and operated by and/or on behalf of EnEma Socio-Educational Network Pvt Ltd. We provide an online platform to bridge the gap between the seeking students/participants and facilitators offering academic as well as non-academic workshops in various domains.EnEma Socio-Educational Network brings it\'s unique and compelling way to connecting experts with students/participants by conducting workshops.. We provide informative options to every user about the, training, workshops available within the nearby vicinity as well as in the area/location of the user\'s choice and also facilitate providers/practitioners of such value-adds to reach the masses at insignificant cost. Users get access to a variety of services, including but not limited to our website, mobile application, and other products and services available through our website and mobile application (collectively the \"Services\"). Our Privacy Policy is incorporated as part of our Terms of Use. By using our Services you acknowledge that you have read, understood and agree to our Privacy Policy and Terms of Use, which apply to all visitors, users, and others who access our Services (\"Users\"). If you do not want to be bound by the same, please do not use our Services.</string>
    <string name="add_money">Adding Money</string>
    <string name="time_format">yyyy.MM.dd.HH.mm.ss</string>
    <string name="no_transaction">No Transaction</string>
    <string name="somecode">SOMECODE</string>
    <string name="get_best_offer_of_all_time">Get best offer of all time</string>
    <string name="by_using_our_site_you_acknowledge_that_you_have_read_and_understand_our_cookie_policy_privacy_policy_and_our_terms_of_service">By using our site, you acknowledge that you have read and understand our Cookie Policy, Privacy Policy, and our Terms of Service.</string>
    <string name="apply">Apply</string>
    <string name="cancelled">Cancelled</string>
    <string name="wallet">Wallet</string>
    <string name="edit_profile_new">Edit Profile</string>
    <string name="edtpro">EDIT PROFILE</string>
    <string name="spro">SAVE PROFILE</string>
    <string name="helloww">Hello</string>
    <string name="new_password">New Password</string>
    <string name="re_new_password">Re-New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="cid">655033789229-amoi3bvjca1a5clcia75e09es74mmeqe.apps.googleusercontent.com</string>
    <string name="facebook_app_id">2329621600640143</string>
    <string name="fb_login_protocol_scheme">fb2329621600640143</string>

</resources>
