<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pattern_bg"
    tools:context=".ui.activities.RegisterActivity">

    <ImageView
        android:id="@+id/imgEnemaLogoColorRegister"
        android:layout_width="190dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/enema_logo_color" />

    <EditText
        android:id="@+id/etxtFullNameR"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/login_edittext_border_dash"
        android:ems="10"
        android:fontFamily="@font/futura_book_font"
        android:drawableLeft="@drawable/ic_users"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        android:hint="@string/full_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgEnemaLogoColorRegister"
        tools:targetApi="o"
        android:drawableStart="@drawable/ic_users" />

    <EditText
        android:id="@+id/etxtMobileR"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/login_edittext_border_dash"
        android:drawableStart="@drawable/ic_phone_call"
        android:drawableLeft="@drawable/ic_phone_call"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/futura_book_font"
        android:gravity="center_vertical"
        android:hint="@string/mobile_number"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:padding="10dp"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtFullNameR"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/etxtPasswordR"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/login_edittext_border_dash"
        android:drawableStart="@drawable/ic_locked"
        android:drawableLeft="@drawable/ic_locked"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/futura_book_font"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtMobileR"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/etxtRePasswordR"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/login_edittext_border_dash"
        android:drawableStart="@drawable/ic_locked"
        android:drawableLeft="@drawable/ic_locked"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/futura_book_font"
        android:gravity="center_vertical"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtPasswordR"
        tools:targetApi="o" />

    <CheckBox
        android:id="@+id/checkAcceptAggrement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/futura_book_font"
        android:text="@string/i_accept_your_terms_condition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtRePasswordR" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/teal_border_btn"
        android:fontFamily="@font/futura_light_bt"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/singup"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imgBottomBgR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkAcceptAggrement" />

    <ImageView
        android:id="@+id/imgBottomBgR"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/enema_botton_bg" />

    <LinearLayout
        android:id="@+id/lhLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/imgBottomBgR"
        app:layout_constraintStart_toStartOf="@+id/imgBottomBgR"
        app:layout_constraintTop_toTopOf="@+id/imgBottomBgR">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/futura_book_font"
            android:text="@string/already_have_an_account"
            android:textColor="@color/colorBlack"
            android:layout_marginEnd="5dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_rreg"
            android:fontFamily="@font/futura_book_font"
            android:textColor="@color/colorCyanTeal" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>